feat(PN-8683): updated test generateNotificationAAR_RADD_NumericPGTest() to new mock version